crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__unregister_segment__unregister_then_query_2_removed_schema.snap
---
source: crates/store/re_redap_tests/src/tests/unregister_segment.rs
expression: required_chunk_info.format_schema_snapshot()
---
chunk_byte_len: non-null UInt64
chunk_entity_path: non-null Utf8 [
    rerun:kind: "control"
]
chunk_id: non-null FixedSizeBinary(16) [
    rerun:kind: "control"
]
chunk_is_static: non-null Boolean [
    rerun:kind: "control"
]
chunk_key: non-null Binary
chunk_segment_id: non-null Utf8 [
    rerun:kind: "control"
]
rerun_layer_direct_url: Dictionary(Int32, Utf8)
rerun_layer_direct_url_expires_at: Dictionary(Int32, Int64)
rerun_segment_layer: non-null Utf8
